tests/machine/x/ocaml/map_literal_dynamic.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/map_literal_dynamic.ml", line 21, characters 34-83:
21 | let m : (string * int) list ref = ref [("a",Obj.repr ((!x)));("b",Obj.repr ((!y)))]
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type (string * Obj.t) list ref
       but an expression was expected of type (string * int) list ref
       Type Obj.t is not compatible with type int 


Context (around line 21):
  19 | let x : int ref = ref 3
  20 | let y : int ref = ref 4
  21 | let m : (string * int) list ref = ref [("a",Obj.repr ((!x)));("b",Obj.repr ((!y)))]
  22 | 
  23 | let () =
